--- a/Automation/Views/Home/Index.cshtml
+++ b/Automation/Views/Home/Index.cshtml
@@ -3,29 +3,43 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>SSE WININF - Monitoring and Automation Site</h1>
+</div>
+
+<div class="col-md-12">
+    <h2>Welcome to the SSE WinInf Monitoring and Automation Site</h2>
+    <p>
+        This site has been designed to assist in monitoring of the estate, and running of standardised PowerShell scripts. The hope is this will reduce mistakes and allow code to be run efficiently.
+    </p>
+    <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
 </div>
 
 <div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+    <div class="col-md-6">
+        <h2><img src="~/Images/scom.png" style="height: 100px; margin: 5px"><span style="vertical-align: top">SCOM Monitoring </span></h2>
+        <div id="SCOMPartial">
+            Loading . . .
+        </div>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+    <div class="col-md-6">
+        <h2><img src="~/Images/PowerShell.png" style="height: 100px; margin: 5px"><span style="vertical-align: top">PowerShell Scripts</span></h2>
+        <div id="PSPartial">
+            Loading. . . 
+        </div>
     </div>
 </div>
+
+@section Scripts {
+    <script type='text/javascript'>
+
+        $(function () {
+            setInterval(function () {
+                $('#SCOMPartial').load('/SCOM/GetPartial?partialName=_SCOM');
+                $('#PSPartial').load('/PowerShell/GetPSPartial');
+            }, 3000);
+        });
+
+    </script>
+}
+
+
