--- a/Automation/Views/Shared/_PowerShell.cshtml
+++ b/Automation/Views/Shared/_PowerShell.cshtml
@@ -25,7 +25,7 @@
     {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.ScriptName)
+                 @Html.ActionLink(item.ScriptName, "Details", new { id = item.ID })
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.ScriptContent)
