--- a/Automation/Views/Shared/_SCOM.cshtml
+++ b/Automation/Views/Shared/_SCOM.cshtml
@@ -11,7 +11,7 @@
                 @if (ViewBag.SCOMNew != null)
                 {
                     string SCOMNew = ViewBag.SCOMNew.ToString();
-                    <h1 class="primary-value">@ViewBag.SCOMNew</h1>
+                    <h1 class="primary-value" data-toggle="modal" data-target="#SCOMNewModal">@ViewBag.SCOMNew</h1>
                     <h2>New Alerts</h2>
                 }
             </div>
