--- a/Automation/Views/SCOM/Index.cshtml
+++ b/Automation/Views/SCOM/Index.cshtml
@@ -3,6 +3,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+
 <h2><img src="~/Images/scom.png" style="height: 100px; margin: 5px"><span style="vertical-align: top">SCOM Monitoring </span></h2>
 
 <div class="row">
@@ -14,12 +15,12 @@
     </div>
     <div class="col-md-8">
         <h2><b>SCOM Alerts</b></h2>
-        <div class="btn-group" role="button" aria-label="Alert Switch">
+        <div class="btn-group" role="button" aria-label="Alert Switch" style="float: right" ">
             <button type="button" id="switchNew" class="btn btn-info">Switch New</button>
             <button type="button" id="switchResolved" class="btn btn-info">Switch Resolved</button>
-        </div>
-        <div style="float: right">
-            <button type="button" id="refreshButton" class="btn btn-success">Refresh</button>
+            <div style="float: right; margin-left: 10px;">
+                <button type="button" id="refreshButton" class="btn btn-success">Refresh</button>
+            </div>
         </div>
 
         <div id="SCOMAlert">
@@ -34,7 +35,7 @@
 
         var alertView = "New"
         $(document).ready(function () {
-            $('#SCOMAlert').load(' / SCOM / GetPartial ? partialName = _SCOMAlertNew');
+            $('#SCOMAlert').load('/SCOM/GetPartial?partialName=_SCOMAlertNew');
             $('#SCOMCards').load('/SCOM/GetPartial?partialName=_SCOM');
         });
 
