--- a/Automation/Views/Home/Index.cshtml
+++ b/Automation/Views/Home/Index.cshtml
@@ -6,18 +6,18 @@
     <h1>SSE WININF - Monitoring and Automation Site</h1>
 </div>
 
-<div id="SCOMNewModal" class="modal fade" role="dialog">
+<div id="SCOMNewModal"  class="modal" role="dialog" aria-hidden="true" aria-labelledby="exampleModalLabel"> 
     <div class="modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">New SCOM Alerts</h4>
+                <h4 class="modal-title" id="exampleModalLabel">New SCOM Alerts</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close" aria-hidden="true">&times;</button>
             </div>
             <div class="modal-body">
                 <div id="SCOMAlert" style="font-size:18px;">
                 </div>
                 <div class="modal-footer">
-                    <button id="SCOMNewClose" class="btn btn-success btn-lg" data-dismiss="modal">Close</button>
+                    <button id="SCOMNewClose" data-dismiss="modal" class="btn btn-success btn-lg">Close</button>
                 </div>
             </div>
         </div>
@@ -66,10 +66,13 @@
         $(document).on('click', '#SCOMNewLink', function () {
             $('#SCOMAlert').load('/SCOM/GetPartial?partialName=_SCOMAlertNew');
         });
+
+        $(document).on('click', '#SCOMClusterLink', function () {
+            $('#SCOMAlert').load('/SCOM/GetPartial?partialName=_SCOMClusters');
+        });
         $(document).ready(function () {
             $('#SCOMNewModal').on('show.bs.modal', function () {
                 $(this).find('.modal-dialog').css({
-
                     display: 'table',
                     width: 'auto', //set width to auto
                     height: 'height', //set height to auto
