--- a/Automation/Views/Shared/_SCOMAlertNEw.cshtml
+++ b/Automation/Views/Shared/_SCOMAlertNEw.cshtml
@@ -1,13 +1,16 @@
-﻿@using PagedList.Mvc
-@model PagedList.IPagedList<Automation.ViewModels.SCOMNewViewModel>
-
-<div class="btn-group" role="button" aria-label="Alert Switch">
-    <button type="button" id="sort10" class="btn btn-info">10</button>
-    <button type="button" id="sort15" class="btn btn-info">15</button>
-    <button type="button" id="sort20" class="btn btn-info">20</button>
+﻿@using X.PagedList
+@using X.PagedList.Mvc
+@using X.PagedList.Mvc.Bootstrap4
+@model X.PagedList.IPagedList<Automation.ViewModels.SCOMNewViewModel>
+<div>
+    <h4>Items per page</h4>
+    <div class="btn-group" role="button" aria-label="Alert Switch">
+        <button type="button" id="sort10" class="btn btn-info">10</button>
+        <button type="button" id="sort15" class="btn btn-info">15</button>
+        <button type="button" id="sort20" class="btn btn-info">20</button>
+    </div>
 </div>
-
-<table id="table" class="table">
+<table id="table" class="table table-dark">
 
         <tr class="header">
             <th>
@@ -62,7 +65,7 @@
 
 Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
 <div id="myPager" class="pagination">
-    @Html.PagedListPager(Model, page => Url.Action("GetPartial", "SCOM", new { partialName = "_SCOMAlertNew", page, sortOrder = ViewBag.CurrentSort }))
+    @Html.PagedListPager((IPagedList)Model, page => Url.Action("GetPartial", "SCOM", new { partialName = "_SCOMAlertNew", page, sortOrder = ViewBag.CurrentSort, pageLength = ViewBag.PageLength }), Bootstrap4PagedListRenderOptions.Classic)
 </div>
 
 
