Fixed weird bootstrap issues and modal now full width and dynamic. Also added _GPO partial view and added to main page.

--- a/Automation/Views/Shared/_SCOMAlertNEw.cshtml
+++ b/Automation/Views/Shared/_SCOMAlertNEw.cshtml
@@ -10,7 +10,7 @@
         <button type="button" id="sort20" class="btn btn-info">20</button>
     </div>
 </div>
-<table id="table" class="table table-dark">
+<table id="table" class="table-dark table-responsive-sm">
 
         <tr class="header">
             <th>
