--- a/Automation/Views/Home/Index.cshtml
+++ b/Automation/Views/Home/Index.cshtml
@@ -6,24 +6,25 @@
     <h1>SSE WININF - Monitoring and Automation Site</h1>
 </div>
 
-<div id="SCOMNewModal"  class="modal" role="dialog" aria-hidden="true" aria-labelledby="exampleModalLabel"> 
-    <div class="modal-dialog-centered">
+<div id="SCOMNewModal" class="modal fade">
+    <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title" id="exampleModalLabel">New SCOM Alerts</h4>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close" aria-hidden="true">&times;</button>
+                <h4 class="modal-title">New SCOM Alerts</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">×</span>
+                </button>
             </div>
             <div class="modal-body">
                 <div id="SCOMAlert" style="font-size:18px;">
                 </div>
                 <div class="modal-footer">
-                    <button id="SCOMNewClose" data-dismiss="modal" class="btn btn-success btn-lg">Close</button>
+                    <button data-dismiss="modal" class="btn btn-success btn-lg">Close</button>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
 
 <div class="col-md-12">
     <h2>Welcome to the SSE WinInf Monitoring and Automation Site</h2>
@@ -34,17 +35,23 @@
 </div>
 
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-4">
         <h2><img src="~/Images/scom.png" style="height: 100px; margin: 5px"><span style="vertical-align: top">SCOM Monitoring </span></h2>
         <div id="SCOMPartial">
             Loading . . .
         </div>
     </div>
-    <div class="col-md-6">
+    <div class="col-md-4">
         <h2><img src="~/Images/PowerShell.png" style="height: 100px; margin: 5px"><span style="vertical-align: top">PowerShell Scripts</span></h2>
         <div id="PSPartial">
             Loading. . .
         </div>
+    </div>
+    <div class="col-md-4"
+         <h2>GPOs</h2>
+         <div id="GPOPartial">
+            Loading. . .     
+         </div>
     </div>
 </div>
 
@@ -54,6 +61,7 @@
         $(document).ready(function () {
             $('#SCOMPartial').load('/SCOM/GetPartial?partialName=_SCOM');
             $('#PSPartial').load('/PowerShell/GetPSPartial');
+            $('#GPOPartial').load('/AD/GPOIndex');
         });
 
         $(function () {
@@ -73,14 +81,18 @@
         $(document).ready(function () {
             $('#SCOMNewModal').on('show.bs.modal', function () {
                 $(this).find('.modal-dialog').css({
+                    postion: 'relative',
                     display: 'table',
-                    width: 'auto', //set width to auto
-                    height: 'height', //set height to auto
-                    'max-height': '100%'
+                    width: '100%', //probably not needed
+                    height: 'auto', //probably not needed 
+                    'max-width': '100%',
+                    'max-height': '100%!important'
                 });
             });
+            $('#SCOMNewModal').on('hidden.bs.modal', function () {
+                $(this).find('#SCOMAlert').html("<div id='SCOMAlert'>Loading . . .</div>");
+            });
         });
-        
 
     </script>
 }
