--- a/Automation/Views/Shared/_SCOMClusters.cshtml
+++ b/Automation/Views/Shared/_SCOMClusters.cshtml
@@ -3,7 +3,15 @@
 @using X.PagedList.Mvc.Bootstrap4
 @model X.PagedList.IPagedList<Automation.Models.SCOM>
 
-<table class="table">
+<div>
+    <h4>Items per page</h4>
+    <div class="btn-group" role="button" aria-label="Alert Switch">
+        <button type="button" id="sort10" class="btn btn-info">10</button>
+        <button type="button" id="sort15" class="btn btn-info">15</button>
+        <button type="button" id="sort20" class="btn btn-info">20</button>
+    </div>
+</div>
+<table id="table" class="table-dark table-responsive-sm">
     <tr>
         <th>
             @Html.ActionLink("Time", "GetPartial", "SCOM", new { partialName = "_SCOMClusters", sortOrder = ViewBag.CurrentSort == "time" ? "time_desc" : "time", page = Model.PageNumber, pageLength = ViewBag.PageLength }, new { @class = "SortButton" })
