--- a/Automation/Views/Shared/_PowerShell.cshtml
+++ b/Automation/Views/Shared/_PowerShell.cshtml
@@ -7,7 +7,7 @@
     Current PowerShell Scripts showing last run date.
 </p>
 
-<table class="table">
+<table class="table table-responsive-sm">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.ScriptName)
